backend-deploysvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geomean-flagger-backend-deploy
  namespace: gmean-flag
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: 352353521492.dkr.ecr.us-west-2.amazonaws.com/geomean-flagger-backend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: geomean-flagger-backend-svc
  namespace: gmean-flag
  labels:
    service: backend
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
